--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,19 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
+  <span>
+  <% if user_signed_in? %>
+      <%= current_user.email %>
+  <% else %>
+      <%= link_to "login",new_user_session_path %>
+  <% end %>
+  </span> 
+
+  <span>
+  <% if user_signed_in? %>
+  <%= link_to "logout", destroy_user_session_path, :method =>:delete%></span>
+   <% end %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <%= yield %>
